# ooi-profiler-nitrate-retriever

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml  requirements.txt
examples/: ooi_profiler_nitrate_analysis.ipynb
examples/bottle_samples/: ce01_nitrate_bottles.nc  ce02_nitrate_bottles.nc  nh01_nitrate_bottles.nc  nh03_nitrate_bottles.nc
scripts/: retrieve_profiler_data.py
